# fastapi-modern-python-web-development

./: .pre-commit-config.yaml  README.md  pyproject.toml
example/: 11_13_activate_the_cors_middleware.py  11_1_use_http_basic_auth_to_get_user_info.py  11_4_add_a_secret_username_and_password_to_auth.py  16_1_get_a_value_from_a_get_form.py  17_1_read_psv_file_with_csv_load_csv.py  17_3_read_psv_file_with_python_tabulate.py  17_5_read_psv_file_with_pandas.py  2_1.py  3_1.py  3_11.py  3_15.py  3_21_request_body.py  3_24_request_header.py  3_26_return_user_agent_header.py  3_28_specify_the_http_status_code.py  3_3.py  3_30_set_the_http_headers.py  3_3_start_uvicorn_internally.py  4_1_use_return.py  4_2_use_yield.py  4_5_a_shy_async_endpoint.py  4_6_another_shy_async_endpoint.py  4_7_using_starlette.py  5_6_using_a_standard_class.py  5_7_using_a_dataclass.py  6_1_a_dependency_function.py  6_2_return_a_user_dependency.py  6_3_define_a_user_check_dependency.py
example/chapter_12_testing/: 12_5_pytest_with_a_mock.py  test_summer_fake.py
learnfastapi/: errors.py  main.py
learnfastapi/data/: creature.py  explorer.py  init.py  user.py
learnfastapi/db/: creature.psv  cryptid.db  load.sh
learnfastapi/fake/: creature.py  explorer.py  user.py
learnfastapi/model/: creature.py
learnfastapi/service/: creature.py  explorer.py  game.py  user.py
learnfastapi/static/: form1.html  form2.html
learnfastapi/template/: game.html  list.html
learnfastapi/test/: test_load.py
learnfastapi/test/full/: test_user.py
learnfastapi/web/: creature.py  explorer.py  game.py  user.py
(+8 files in other folders)
