[tool.poetry]
name = "learnfastapi"
version = "0.1.0"
description = ""
authors = ["Foysal Ahamed <thisisfoysal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
httpie = "^3.2.3"
requests = "2.31.0"
httpx = "^0.27.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.12"
hypothesis = "^6.112.4"
schemathesis = "^3.36.4"
aiofiles = "^24.1.0"
tabulate = "^0.9.0"
pandas = "^2.2.3"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"
pytest = "^8.3.3"


[tool.poetry.group.test.dependencies]
faker = "^30.3.0"


[tool.poetry.group.ai.dependencies]
torch = "^2.4.1"
transformers = "^4.45.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
